[tool.poetry]
name = "csd"
version = "0.1.0"
description = ""
authors = [ "Ben <benjamin@selas.studio>"]
readme = "README.md"
dependencies = {python = "^3.9", black = "^22.6.0", isort = "^5.10.1", torch = { version ="=1.12.0+cu113", source = "pytorch" }, hivemind = "^1.1.0", ldm = {path = "/home/patron/stable-diffusion"}, configargparse = "^1.5.3", opencv-python = "4.4.0.46", autokeras = "^1.0.19", open-clip-torch = "^1.3.0", einops = "^0.4.1", omegaconf = "^2.2.2", tensorflow = "^2.9.0", pytorch-lightning = "^1.7.1", taming = {path = "/home/patron/stable-diffusion/src/taming-transformers", develop = true}, clip = {git = "https://github.com/openai/CLIP.git"}, transformers = "^4.21.1", kornia = "^0.6.6"}


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu113/"
secondary = true

[build-system]
requires = [ "relaxed-poetry-core>=0.1.2"]
build-backend = "poetry.core.masonry.api"